# majutsu

./: CMakeLists.txt  majutsu-config.cmake.in
include/majutsu/: access_role.hpp  access_role_tpl.hpp  bind.hpp  bind_fwd.hpp  class.hpp  class_decl.hpp  class_fwd.hpp  class_impl.hpp  composite.hpp  composite_fwd.hpp  const_raw_pointer.hpp  constant.hpp  constant_fwd.hpp  dispatch_type.hpp  dispatch_value.hpp  extract_constant.hpp  flatten.hpp  fundamental.hpp  fundamental_decl.hpp  fundamental_fwd.hpp  get.hpp  init.hpp  init_types.hpp  integral_size.hpp  is_constant.hpp  is_role.hpp  is_role_tag.hpp  is_static_size.hpp  make.hpp  make_role_tag.hpp  make_role_tag_arg.hpp  make_role_tag_arg_fwd.hpp  make_role_tag_fwd.hpp  needed_size.hpp  place.hpp  placeholder.hpp  placeholder_fwd.hpp  raw_data.hpp  raw_pointer.hpp  record.hpp  (+27 more)
include/majutsu/detail/: all_initializers.hpp  check_empty_class.hpp  contains_initializer.hpp  copy_n.hpp  find_role.hpp  find_role_deref.hpp  flatten.hpp  index_of.hpp  init.hpp  init_tuple.hpp  make_iterators.hpp  static_size_base.hpp  tag_is_same.hpp  wrapped_type.hpp
include/majutsu/fusion/: record.hpp  record_decl.hpp  record_fwd.hpp  record_impl.hpp
include/majutsu/fusion/detail/: expand_initlist.hpp  init_element.hpp
include/majutsu/memory/: fusion.hpp  fusion_decl.hpp  fusion_fwd.hpp  fusion_impl.hpp  init_count.hpp  init_types.hpp  needs_init.hpp  raw.hpp  raw_decl.hpp  raw_fwd.hpp  raw_impl.hpp
include/majutsu/memory/detail/: expand_fusion_initlist.hpp  index_of.hpp  init_constants.hpp  init_fusion_element.hpp  init_raw_memory.hpp  store.hpp  store_decl.hpp  store_fwd.hpp  store_impl.hpp
include/majutsu/raw/: combine_static_sizes.hpp  const_pointer.hpp  constant.hpp  constant_fwd.hpp  data.hpp  element_type.hpp  extract_constant.hpp  fundamental.hpp  fundamental_decl.hpp  fundamental_fwd.hpp  integral_size.hpp  is_constant.hpp  is_static_size.hpp  make.hpp  make_generic.hpp  needed_size.hpp  needed_size_static.hpp  place.hpp  place_and_update.hpp  pointer.hpp  record.hpp  record_binding.hpp  record_decl.hpp  record_fwd.hpp  record_impl.hpp  record_variadic.hpp  record_variadic_fwd.hpp  size_type.hpp  static_size.hpp  write.hpp
include/majutsu/raw/detail/: copy_n.hpp  dynamic_size.hpp  init.hpp  init_constants.hpp  init_types.hpp  is_static_size.hpp  make_record.hpp  needs_init.hpp  static_size_base.hpp  store_decl.hpp  store_fwd.hpp  store_impl.hpp
include/majutsu/raw/stream/: bind.hpp  istream.hpp  istream_fwd.hpp  memory.hpp  memory_fwd.hpp  read.hpp  reference.hpp  result.hpp  return.hpp  return_if.hpp
test/: CMakeLists.txt  class.cpp  fusion.cpp  init.cpp  raw.cpp  record.cpp
test/raw/: combine_static_sizes.cpp  nested.cpp  stream.cpp
util/: license_paths.json  license_template.hpp  prettify_includes.sh  update_cmake.sh
